syntax = "proto3";
package response;

import "google/protobuf/any.proto";
import "utils/any/any.proto";
import "utils/proto/go/go.proto";

//因protoc生成会自动创建包目录，此文件仅供proto文件引用
//生成使用gen.proto文件
option go_package = "github.com/liov/hoper/go/v2/protobuf/utils/response";
option java_package = "xyz.hoper.protobuf.response";


message AnyReply {
    uint32 code = 1 [(go.field) = {tags:'json:"code"'}];
    string message = 2;
    google.protobuf.Any details = 3;
}

message RawReply {
    uint32 code = 1 [(go.field) = {tags:'json:"code"'}];
    string message =2;
    //字节数组json
    any.RawJson details =3 ;
}

//返回数据为字符串，用于新建修改删除类的成功失败提示
message CommonRep {
    uint32 code = 1 [(go.field) = {tags:'json:"code"'}];
    string message = 2;
    string details = 3;
}

message TinyRep {
    uint32 code = 1 [(go.field) = {tags:'json:"code"'}];
    string message = 2;
}

message HttpResponse{
    map<string, string> Header =1;
    bytes body = 2;
    uint32 statusCode = 3;
}